# hive

./: .gitignore  CMakeLists.txt
examples/Database/: DatabaseSample.cpp
examples/Database/data/: jane.txt
examples/database/: CMakeLists.txt  DatabaseSample.cpp  database_sample.cpp
include/hive/: Cache.h  Converter.h  PhysicalResourceLocator.h  Resource.h  ResourceCache.h  ResourceLocator.h  ResourceManager.h  ResourceProcessor.h  TextureCache.h  TextureResource.h  TypeId.h  Utils.h  importer.h  in_memory_locator.h  locator.h  physical_file_locator.h  resource_manager.h  typed_resource.h  typed_resource_cache.h
include/hive/Resources/: File.h  Image.h  Texture.h
include/hive/importer/: importer.h
include/hive/locator/: composite_locator.hpp  in_memory_locator.h  locator.h  physical_file_locator.h
samples/: CMakeLists.txt
samples/Database/: CMakeLists.txt  DatabaseSample.cpp
samples/Database/data/: john.txt  sarah.txt
src/: Converter.cpp  PhysicalResourceLocator.cpp  ResourceLocator.cpp  ResourceManager.cpp  TextureCache.cpp  Utils.cpp  in_memory_locator.cpp  physical_file_locator.cpp  resource_manager.cpp
src/locator/: composite_locator.cpp  in_memory_locator.cpp  physical_file_locator.cpp
tests/: CacheTests.cpp  ResourceManagerTests.cpp  ResourceTests.cpp  data.h  resource_manager_tests.cpp  typed_resource_cache_tests.cpp  typed_resource_tests.cpp
